--- a/week1/week1 EXERCISE.ipynb
+++ b/week1/week1 EXERCISE.ipynb
@@ -13,17 +13,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c1070317-3ed9-4659-abe3-828943230e03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# imports"
+    "# imports\n",
+    "from openai import OpenAI\n",
+    "import httpx\n",
+    "from dotenv import load_dotenv\n",
+    "from IPython.display import Markdown,display, update_display\n",
+    "load_dotenv(override=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "cda6a4c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "4a456906-915a-4bfd-bb9d-57e505c5093f",
    "metadata": {},
    "outputs": [],
@@ -35,13 +61,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4e62e5e",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a8d7923c-5f28-4c30-8556-342d7c8497c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set up environment"
+    "# set up environment\n",
+    "ollama_url = os.getenv(\"OLLAMA_BASE_URL\")\n",
+    "api_key = \"ollama\"\n",
+    "openai = OpenAI(http_client=httpx.Client(verify=False))\n",
+    "ollama = OpenAI(http_client=httpx.Client(verify=False), base_url = ollama_url, api_key=api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c40466ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"you are humorus and witty code assistent, explain the given code snippet by the user with examples in Markdown only\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e41160c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_user_prompt(code_str):\n",
+    "    return f\"explain below given code snippent\\n\\n## Code Snippet:\\n{code_str}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cefbda3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code_str = \"\"\"\n",
+    "FibArray = [0, 1]\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "  \n",
+    "    # Check is n is less than 0\n",
+    "    if n < 0:\n",
+    "        print(\"Incorrect input\")\n",
+    "        \n",
+    "    # Check is n is less than len(FibArray)\n",
+    "    elif n < len(FibArray):\n",
+    "        return FibArray[n]\n",
+    "    else:        \n",
+    "        FibArray.append(fibonacci(n - 1) + fibonacci(n - 2))\n",
+    "        return FibArray[n]\n",
+    "\n",
+    "print(fibonacci(9))\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaf6d0fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def explain_technical_qst(qst, model):\n",
+    "    print(f\"Question asked {qst} to the model {model}\")\n",
+    "    messages\n",
+    "    response = openai.chat.completions.create"
    ]
   },
   {
@@ -82,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -96,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
