--- a/week2/day5.ipynb
+++ b/week2/day5.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8b50bbe2-c0b1-49c3-9a5c-1ba7efa2bcb4",
    "metadata": {},
    "outputs": [],
@@ -29,10 +29,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "747e8786-9da8-4342-b6c9-f5f69c2e22ae",
+   "execution_count": 2,
+   "id": "7daaeab9",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import httpx\n",
+    "http_client=httpx.Client(verify=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "747e8786-9da8-4342-b6c9-f5f69c2e22ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialization\n",
     "\n",
@@ -45,14 +64,14 @@
     "    print(\"OpenAI API Key not set\")\n",
     "    \n",
     "MODEL = \"gpt-4.1-mini\"\n",
-    "openai = OpenAI()\n",
+    "openai = OpenAI(http_client=http_client)\n",
     "\n",
     "DB = \"prices.db\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0a521d84-d07c-49ab-a0df-d6451499ed97",
    "metadata": {},
    "outputs": [],
@@ -66,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c3e8173c",
    "metadata": {},
    "outputs": [],
@@ -82,20 +101,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "03f19289",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATABASE TOOL CALLED: Getting price for Paris\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Ticket price to Paris is $899.0'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_ticket_price(\"Paris\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bcfb6523",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'type': 'function',\n",
+       "  'function': {'name': 'get_ticket_price',\n",
+       "   'description': 'Get the price of a return ticket to the destination city.',\n",
+       "   'parameters': {'type': 'object',\n",
+       "    'properties': {'destination_city': {'type': 'string',\n",
+       "      'description': 'The city that the customer wants to travel to'}},\n",
+       "    'required': ['destination_city'],\n",
+       "    'additionalProperties': False}}}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "price_function = {\n",
     "    \"name\": \"get_ticket_price\",\n",
@@ -135,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c91d012e",
    "metadata": {},
    "outputs": [],
@@ -157,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "956c3b61",
    "metadata": {},
    "outputs": [],
@@ -227,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2c27c4ba-8ed5-492f-add1-02ce9c81d34c",
    "metadata": {},
    "outputs": [],
@@ -241,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "773a9f11-557e-43c9-ad50-56cbec3a0f8f",
    "metadata": {},
    "outputs": [],
@@ -272,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "728a12c5-adc3-415d-bb05-82beb73b079b",
    "metadata": {},
    "outputs": [],
@@ -300,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b119ed1b",
    "metadata": {},
    "outputs": [],
@@ -332,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5846bc77",
    "metadata": {},
    "outputs": [],
@@ -373,7 +428,43 @@
    "execution_count": null,
    "id": "9f250915",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7903\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7903/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATABASE TOOL CALLED: Getting price for London\n"
+     ]
+    }
+   ],
    "source": [
     "# Callbacks (along with the chat() function above)\n",
     "\n",
@@ -449,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
